fix overflow-x

--- a/index.css
+++ b/index.css
@@ -2,11 +2,18 @@
     box-sizing: border-box;
 }
 
+html, body {
+    width: 100%;
+    overflow-x: hidden;
+}
+
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     color: #333333;
     margin: 0;
+    padding: 0;
 }
 
 /* Typography */
